plugins {
	id 'org.springframework.boot' version '2.4.3'
	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
	id 'java'
	id "io.freefair.lombok" version "5.3.0"
}

apply plugin: 'java'
apply plugin: 'org.springframework.boot'

group = 'uk.nhs.adaptors'
sourceCompatibility = '11'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework:spring-jms:5.2.6.RELEASE'
	implementation 'org.apache.qpid:qpid-jms-client:0.56.0'
	implementation 'org.apache.commons:commons-lang3:3.11'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

lombok {
	config['lombok.log.fieldName'] = 'LOGGER'
}

test {
	useJUnitPlatform()
}
